moving docs from wiki, fixes #142